Repaired GH action

--- a/hugo/public/index.html
+++ b/hugo/public/index.html
@@ -12,7 +12,7 @@
 
 
 
-<link rel="stylesheet" href="/css/style.min.1c6b0b5136273dd375892c9470338b84954f50c041b5909bd88d1e71e8db76bc.css" integrity="sha256-HGsLUTYnPdN1iSyUcDOLhJVPUMBBtZCb2I0ecejbdrw=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/style.min.610a956cfcec4f8dd5843a526f15f2583f557e714280cdd94d442c7b72827097.css" integrity="sha256-YQqVbPzsT43VhDpSbxXyWD9VfnFCgM3ZTUQse3KCcJc=" crossorigin="anonymous">
 
 
 
@@ -72,7 +72,7 @@
 
     
 
-<section id="homepage-hero-banner" class="hero is-info is-fullheight">
+<section id="homepage-hero-banner" class="hero is-info is-fullheight" style="background-image: url('/images/landscape_banner.jpg');">
     <div class="hero-body">
         <div class="container block">
             <div class="columns is-centered">
