--- a/hugo/public/art/index.html
+++ b/hugo/public/art/index.html
@@ -11,7 +11,7 @@
 
 
 
-<link rel="stylesheet" href="/css/style.min.1c6b0b5136273dd375892c9470338b84954f50c041b5909bd88d1e71e8db76bc.css" integrity="sha256-HGsLUTYnPdN1iSyUcDOLhJVPUMBBtZCb2I0ecejbdrw=" crossorigin="anonymous">
+<link rel="stylesheet" href="/css/style.min.690f2e86b1f5d731615bed19cb09756e07c213a48832f55853166f83590cbcea.css" integrity="sha256-aQ8uhrH11zFhW&#43;0Zywl1bgfCE6SIMvVYUxZvg1kMvOo=" crossorigin="anonymous">
 
 
 
